--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.3",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-select-country-list": "^2.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
